2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: Call release with need_another flag.
	* perl/Amanda/Changer/single.pm (do_release): eject the tevice if
	  need_another

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm (after_poll): Set $remove_undef_state
	  if $self->{'chg'}->{'scan-require-update'}

2017-09-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c:i Do not cancel the shm_ring if the dump-result
	  is 1 (STRANGE)

2017-09-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/dvdrw-device.m4, config/amanda/ndmp-device.m4,
	  config/amanda/s3-device.m4: Do not include the device if compiled
	  --without-server
	* config/amanda/libs.m4: Do not link with libcurl if no se device or
	  no server
	* config/amanda/s3-device.m4: Re-order

2017-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Add comment
	* common-src/local-security.c: Check result of setregid and setreuid

2017-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Chapman Flack
	* common-src/local-security.c: Check the hostname is local
	* man/xml-source/amanda-auth.7.xml: Document what a localhost is
	* COPYRIGHT.BSD: New copytight file
	* AUTHORS: Add Chapman Flack

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Controller.pm (msg_ABORT): Set mesg from param

2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amflush.pl: Use the date specified by the user

2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amar-src/amar.c: Fix race with stop/start_read when record are
	  already read

2017-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Fix getservbyport_r with 4 arguments

2017-08-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Call correct variant of getservbyname_r